// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ComposeTweet component renders without error 1`] = `
"<div id=\\"compose-tweet\\" class=\\"flex flex-col border-b border-r w-full\\">
  <div class=\\"flex flex-row\\"><svg xmlns=\\"http://www.w3.org/2000/svg\\" fill=\\"none\\" viewBox=\\"0 0 24 24\\" stroke=\\"currentColor\\" class=\\"w-12 h-auto mt-4 ml-3\\">
      <path stroke-linecap=\\"round\\" stroke-linejoin=\\"round\\" stroke-width=\\"2\\" d=\\"M5.121 17.804A13.937 13.937 0 0112 16c2.5 0 4.847.655 6.879 1.804M15 10a3 3 0 11-6 0 3 3 0 016 0zm6 2a9 9 0 11-18 0 9 9 0 0118 0z\\"></path>
    </svg><textarea id=\\"compose-tweet-content\\" class=\\"text-lg w-full p-2 mt-2 h-auto ml-3 focus:outline-none\\" placeholder=\\"What's happening?\\" maxlength=\\"140\\"></textarea></div>
  <div class=\\"flex flex-row ml-16 justify-end\\"><button class=\\"tweet-btn-disabled\\">Tweet</button></div>
</div>"
`;

exports[`Home component renders without error 1`] = `
"<div id=\\"home border-r min-h-screen border-r\\">
  <div id=\\"home-header\\" class=\\"home-header border-r\\">
    <h2 class=\\"h2 p-4\\">Home</h2>
  </div>
  <div id=\\"compose-tweet\\" class=\\"flex flex-col border-b border-r w-full\\">
    <div class=\\"flex flex-row\\"><img class=\\"w-14 h-auto mt-4 ml-3 rounded-full\\"><textarea id=\\"compose-tweet-content\\" class=\\"text-lg w-full p-2 mt-2 h-auto ml-3 focus:outline-none\\" placeholder=\\"What's happening?\\" maxlength=\\"140\\"></textarea></div>
    <div class=\\"flex flex-row ml-16 justify-end\\"><button class=\\"tweet-btn-disabled\\">Tweet</button></div>
  </div>
  <div class=\\"h-screen w-full flex flex-col mt-0 border-r\\">
    <div id=\\"single-tweet\\" class=\\"border-b hover:bg-gray-50 flex flex-col items-center\\">
      <div class=\\"flex flex-row mt-4 w-full\\"><a href=\\"/fizzlekelly\\"><img src=\\"/fiona.png\\" class=\\"w-14 h-auto mx-3 rounded-full\\"></a>
        <div class=\\"ml-3 flex flex-col w-full\\">
          <div class=\\"flex flex-row w-full justify-between\\">
            <div class=\\"flex flex-col sm:flex-row \\"><a id=\\"user-profile-link\\" class=\\"flex flex-row flex-wrap\\" href=\\"/fizzlekelly\\">
                <h3 class=\\"font-bold hover:underline\\">Fiona Kelly</h3>
                <h4 class=\\"text-gray-500 ml-1\\">@fizzlekelly</h4>
              </a><span class=\\"hidden sm:flex text-gray-500 ml-1\\">•</span>
              <h4 class=\\"text-gray-500 ml-1 hover:underline\\">Tue Sep 28 2021</h4>
            </div>
            <div id=\\"tweet-options\\"><button class=\\"text-gray-500 hover:bg-blue-50 hover:text-blue-500 rounded-full p-1 mr-2\\">•••</button></div>
          </div>
          <div>
            <p class=\\" mr-2\\">I play the flute!</p>
          </div>
        </div>
      </div>
      <div class=\\"flex flex-row justify-between px-12 my-2 text-gray-500 w-full\\"><button class=\\"flex flex-row items-center hover:text-blue-500\\"><svg xmlns=\\"http://www.w3.org/2000/svg\\" fill=\\"none\\" viewBox=\\"0 0 24 24\\" stroke=\\"currentColor\\" class=\\" hover:bg-blue-50 tweet-options\\">
            <path stroke-linecap=\\"round\\" stroke-linejoin=\\"round\\" stroke-width=\\"2\\" d=\\"M8 12h.01M12 12h.01M16 12h.01M21 12c0 4.418-4.03 8-9 8a9.863 9.863 0 01-4.255-.949L3 20l1.395-3.72C3.512 15.042 3 13.574 3 12c0-4.418 4.03-8 9-8s9 3.582 9 8z\\"></path>
          </svg>
          <p>1</p>
        </button><button id=\\"retweet-button\\" class=\\"flex flex-row items-center hover:text-green-500\\"><svg xmlns=\\"http://www.w3.org/2000/svg\\" fill=\\"none\\" viewBox=\\"0 0 24 24\\" stroke=\\"currentColor\\" class=\\"hover:bg-green-50 tweet-options\\">
            <path stroke-linecap=\\"round\\" stroke-linejoin=\\"round\\" stroke-width=\\"2\\" d=\\"M4 4v5h.582m15.356 2A8.001 8.001 0 004.582 9m0 0H9m11 11v-5h-.581m0 0a8.003 8.003 0 01-15.357-2m15.357 2H15\\"></path>
          </svg>
          <p id=\\"retweet-count\\">1</p>
        </button><button id=\\"like-button\\" class=\\"flex flex-row  items-center hover:text-red-500\\"><svg xmlns=\\"http://www.w3.org/2000/svg\\" fill=\\"none\\" viewBox=\\"0 0 24 24\\" stroke=\\"currentColor\\" class=\\"hover:bg-red-50 tweet-options\\">
            <path stroke-linecap=\\"round\\" stroke-linejoin=\\"round\\" stroke-width=\\"2\\" d=\\"M4.318 6.318a4.5 4.5 0 000 6.364L12 20.364l7.682-7.682a4.5 4.5 0 00-6.364-6.364L12 7.636l-1.318-1.318a4.5 4.5 0 00-6.364 0z\\"></path>
          </svg>
          <p id=\\"like-count\\">1</p>
        </button></div>
    </div>
  </div>
</div>"
`;

exports[`HomeFeed component renders without error 1`] = `
"<div class=\\"h-screen w-full flex flex-col mt-0 border-r\\">
  <div id=\\"single-tweet\\" class=\\"border-b hover:bg-gray-50 flex flex-col items-center\\">
    <div class=\\"flex flex-row mt-4 w-full\\"><a href=\\"/fizzlekelly\\"><img src=\\"/fiona.png\\" class=\\"w-14 h-auto mx-3 rounded-full\\"></a>
      <div class=\\"ml-3 flex flex-col w-full\\">
        <div class=\\"flex flex-row w-full justify-between\\">
          <div class=\\"flex flex-col sm:flex-row \\"><a id=\\"user-profile-link\\" class=\\"flex flex-row flex-wrap\\" href=\\"/fizzlekelly\\">
              <h3 class=\\"font-bold hover:underline\\">Fiona Kelly</h3>
              <h4 class=\\"text-gray-500 ml-1\\">@fizzlekelly</h4>
            </a><span class=\\"hidden sm:flex text-gray-500 ml-1\\">•</span>
            <h4 class=\\"text-gray-500 ml-1 hover:underline\\">Tue Sep 28 2021</h4>
          </div>
          <div id=\\"tweet-options\\"><button class=\\"text-gray-500 hover:bg-blue-50 hover:text-blue-500 rounded-full p-1 mr-2\\">•••</button></div>
        </div>
        <div>
          <p class=\\" mr-2\\">I play the flute!</p>
        </div>
      </div>
    </div>
    <div class=\\"flex flex-row justify-between px-12 my-2 text-gray-500 w-full\\"><button class=\\"flex flex-row items-center hover:text-blue-500\\"><svg xmlns=\\"http://www.w3.org/2000/svg\\" fill=\\"none\\" viewBox=\\"0 0 24 24\\" stroke=\\"currentColor\\" class=\\" hover:bg-blue-50 tweet-options\\">
          <path stroke-linecap=\\"round\\" stroke-linejoin=\\"round\\" stroke-width=\\"2\\" d=\\"M8 12h.01M12 12h.01M16 12h.01M21 12c0 4.418-4.03 8-9 8a9.863 9.863 0 01-4.255-.949L3 20l1.395-3.72C3.512 15.042 3 13.574 3 12c0-4.418 4.03-8 9-8s9 3.582 9 8z\\"></path>
        </svg>
        <p>1</p>
      </button><button id=\\"retweet-button\\" class=\\"flex flex-row items-center hover:text-green-500\\"><svg xmlns=\\"http://www.w3.org/2000/svg\\" fill=\\"none\\" viewBox=\\"0 0 24 24\\" stroke=\\"currentColor\\" class=\\"hover:bg-green-50 tweet-options\\">
          <path stroke-linecap=\\"round\\" stroke-linejoin=\\"round\\" stroke-width=\\"2\\" d=\\"M4 4v5h.582m15.356 2A8.001 8.001 0 004.582 9m0 0H9m11 11v-5h-.581m0 0a8.003 8.003 0 01-15.357-2m15.357 2H15\\"></path>
        </svg>
        <p id=\\"retweet-count\\">1</p>
      </button><button id=\\"like-button\\" class=\\"flex flex-row  items-center hover:text-red-500\\"><svg xmlns=\\"http://www.w3.org/2000/svg\\" fill=\\"none\\" viewBox=\\"0 0 24 24\\" stroke=\\"currentColor\\" class=\\"hover:bg-red-50 tweet-options\\">
          <path stroke-linecap=\\"round\\" stroke-linejoin=\\"round\\" stroke-width=\\"2\\" d=\\"M4.318 6.318a4.5 4.5 0 000 6.364L12 20.364l7.682-7.682a4.5 4.5 0 00-6.364-6.364L12 7.636l-1.318-1.318a4.5 4.5 0 00-6.364 0z\\"></path>
        </svg>
        <p id=\\"like-count\\">1</p>
      </button></div>
  </div>
</div>"
`;

exports[`SingleTweet component renders without error 1`] = `
"<div id=\\"single-tweet\\" class=\\"border-b hover:bg-gray-50 flex flex-col items-center\\">
  <div class=\\"flex flex-row mt-4 w-full\\"><a href=\\"/fizzlekelly\\"><img src=\\"/fiona.png\\" class=\\"w-14 h-auto mx-3 rounded-full\\"></a>
    <div class=\\"ml-3 flex flex-col w-full\\">
      <div class=\\"flex flex-row w-full justify-between\\">
        <div class=\\"flex flex-col sm:flex-row \\"><a id=\\"user-profile-link\\" class=\\"flex flex-row flex-wrap\\" href=\\"/fizzlekelly\\">
            <h3 class=\\"font-bold hover:underline\\">Fiona Kelly</h3>
            <h4 class=\\"text-gray-500 ml-1\\">@fizzlekelly</h4>
          </a><span class=\\"hidden sm:flex text-gray-500 ml-1\\">•</span>
          <h4 class=\\"text-gray-500 ml-1 hover:underline\\">Tue Sep 28 2021</h4>
        </div>
        <div id=\\"tweet-options\\"><button class=\\"text-gray-500 hover:bg-blue-50 hover:text-blue-500 rounded-full p-1 mr-2\\">•••</button></div>
      </div>
      <div>
        <p class=\\" mr-2\\">I play the flute!</p>
      </div>
    </div>
  </div>
  <div class=\\"flex flex-row justify-between px-12 my-2 text-gray-500 w-full\\"><button class=\\"flex flex-row items-center hover:text-blue-500\\"><svg xmlns=\\"http://www.w3.org/2000/svg\\" fill=\\"none\\" viewBox=\\"0 0 24 24\\" stroke=\\"currentColor\\" class=\\" hover:bg-blue-50 tweet-options\\">
        <path stroke-linecap=\\"round\\" stroke-linejoin=\\"round\\" stroke-width=\\"2\\" d=\\"M8 12h.01M12 12h.01M16 12h.01M21 12c0 4.418-4.03 8-9 8a9.863 9.863 0 01-4.255-.949L3 20l1.395-3.72C3.512 15.042 3 13.574 3 12c0-4.418 4.03-8 9-8s9 3.582 9 8z\\"></path>
      </svg>
      <p>1</p>
    </button><button id=\\"retweet-button\\" class=\\"flex flex-row items-center hover:text-green-500\\"><svg xmlns=\\"http://www.w3.org/2000/svg\\" fill=\\"none\\" viewBox=\\"0 0 24 24\\" stroke=\\"currentColor\\" class=\\"hover:bg-green-50 tweet-options\\">
        <path stroke-linecap=\\"round\\" stroke-linejoin=\\"round\\" stroke-width=\\"2\\" d=\\"M4 4v5h.582m15.356 2A8.001 8.001 0 004.582 9m0 0H9m11 11v-5h-.581m0 0a8.003 8.003 0 01-15.357-2m15.357 2H15\\"></path>
      </svg>
      <p id=\\"retweet-count\\">1</p>
    </button><button id=\\"like-button\\" class=\\"flex flex-row  items-center hover:text-red-500\\"><svg xmlns=\\"http://www.w3.org/2000/svg\\" fill=\\"none\\" viewBox=\\"0 0 24 24\\" stroke=\\"currentColor\\" class=\\"hover:bg-red-50 tweet-options\\">
        <path stroke-linecap=\\"round\\" stroke-linejoin=\\"round\\" stroke-width=\\"2\\" d=\\"M4.318 6.318a4.5 4.5 0 000 6.364L12 20.364l7.682-7.682a4.5 4.5 0 00-6.364-6.364L12 7.636l-1.318-1.318a4.5 4.5 0 00-6.364 0z\\"></path>
      </svg>
      <p id=\\"like-count\\">1</p>
    </button></div>
</div>"
`;
